Fix carrot display in dark mode
Former-commit-id: 5bc08ba7adf13c46c527a4bb0766009e557dd6c4

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -132,12 +132,21 @@ figure figcaption {
   width: 8px;
   height: 12px;
   transform: rotate(0);
+  filter: none;
 }
+
+html[data-theme=dark] .theme-doc-sidebar-menu .menu__caret:before {
+  background-image: url("data:image/svg+xml, %3Csvg%20width=%228%22%20height=%2213%22%20viewBox=%220%200%208%2013%22%20fill=%22none%22%20xmlns=%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Cpath%20d=%22M1%2012L7%206.5L1%201%22%20stroke=%22%23D9D9D9%22%20stroke-width=%221.25%22%2F%3E%0A%3C%2Fsvg%3E%0A");
+}
+
 .theme-doc-sidebar-menu .menu__link--active + .menu__caret:before {
   background-image: url("data:image/svg+xml, %3Csvg%20width=%2212%22%20height=%228%22%20viewBox=%220%200%2012%208%22%20fill=%22none%22%20xmlns=%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Cpath%20d=%22M0.500001%200.499999L6%206.5L11.5%200.5%22%20stroke=%22%23283AF7%22%20stroke-width=%221.25%22%2F%3E%0A%3C%2Fsvg%3E%0A");
   width: 12px;
   height: 8px;
+}
 
+html[data-theme=dark] .theme-doc-sidebar-menu .menu__link--active + .menu__caret:before {
+  background-image: url("data:image/svg+xml, %3Csvg%20width=%2212%22%20height=%228%22%20viewBox=%220%200%2012%208%22%20fill=%22none%22%20xmlns=%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%3Cpath%20d=%22M0.500001%200.499999L6%206.5L11.5%200.5%22%20stroke=%22%2385FE99%22%20stroke-width=%221.25%22%2F%3E%0A%3C%2Fsvg%3E%0A");
 }
 
 [class^=docMainContainer_] {
